--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^2.0.19",
+    "supertest": "^6.3.3",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0"
   }
 }
